Code cleanup : Fixed sonar issues.